examples/fail/semantic/alias_cycle.bina
// EXPECT_SEMANTIC_ERROR: cyclic type alias
type A = B;
type B = A;

fn main() -> int {
    return 0;
}
